force-app/main/default/objects/Journal_History__c/Journal_History__c.object-meta.xml
<CustomObject>
    <label>Journal History</label>
    <nameField>
        <displayFormat>JH-{0000}</displayFormat>
        <label>Journal History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>