force-app/main/default/objects/Journal_History__c/fields/journal_Deadline_New__c.field-meta.xml
<CustomField>
    <fullName>journal_Deadline_New__c</fullName>
    <label>journal Deadline (New)</label>
    <type>DateTime</type>
</CustomField>