force-app/main/default/objects/Journal_History__c/fields/journal_Deadline_Old__c.field-meta.xml
<CustomField>
    <fullName>journal_Deadline_Old__c</fullName>
    <label>journal Deadline (Old)</label>
    <type>DateTime</type>
</CustomField>