force-app/main/default/objects/Journal_History__c/fields/Journal_States_New__c.field-meta.xml
<CustomField>
    <fullName>Journal_States_New__c</fullName>
    <label>Journal States (New)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>