force-app/main/default/objects/Journal_History__c/fields/Last_time_journal_was_edited_New__c.field-meta.xml
<CustomField>
    <fullName>Last_time_journal_was_edited_New__c</fullName>
    <label>Last time journal was edited (New)</label>
    <type>DateTime</type>
</CustomField>