force-app/main/default/objects/Journal_History__c/fields/Last_time_journal_was_edited_Old__c.field-meta.xml
<CustomField>
    <fullName>Last_time_journal_was_edited_Old__c</fullName>
    <label>Last time journal was edited (Old)</label>
    <type>DateTime</type>
</CustomField>