force-app/main/default/objects/Journal_History__c/fields/Responsible_lawyer_New__c.field-meta.xml
<CustomField>
    <fullName>Responsible_lawyer_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible lawyer (New)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journal_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>