force-app/main/default/objects/Journal_History__c/fields/Responsible_lawyer_Old__c.field-meta.xml
<CustomField>
    <fullName>Responsible_lawyer_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible lawyer (Old)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journal_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>